# bfgminer

./: .gitignore  .gitmodules  .travis.deps  .travis.script  .travis.yml  01-cgminer.rules  70-bfgminer.rules.in  API-README  API.java  ASIC-README  AUTHORS  ChangeLog  DiabloMiner.cl  DiabloMiner120210.cl  DiabloMiner120221.cl  END-OF-LIFE  FPGA-README  GPU-README  HACKING  LICENSE  MCast.java  Makefile.am  NEWS  NEWS.bak  README  README-Debian  README.ASIC  README.CPU  README.Debian  README.FPGA  README.GPU  README.OpenWrt  README.RPC  README.RPC.bak  README.bak  README.md  README.scrypt  SCRYPT-README  SECURITY.md  adl.c  (+260 more)
ADL/: adl_defines.h  adl_sdk.h  adl_structures.h
ADL_SDK/: .gitignore  readme.txt
CL/: cl.h  cl_platform.h
bitstreams/: COPYING_fpgaminer  LICENSE.txt  fpgaminer_top_fixed7_197MHz.bit  fpgaminer_x6500-overclocker-0402.bit  ztex_ufm1_15b1.bit
ccan/: Makefile.am
ccan.bfg/: Makefile.am
ccan/compiler/: _info  compiler.h
ccan/compiler/test/: compile_fail-printf.c  run-is_compile_constant.c
ccan/opt/: _info  helpers.c  helpers.d  opt.c  opt.d  opt.h  parse.c  parse.d  private.h  usage.c  usage.d
ccan/opt/test/: compile_ok-const-arg.c  run-checkopt.c  run-correct-reporting.c  run-helpers.c  run-iter.c  run-no-options.c  run-usage.c  run.c  utils.c  utils.h
ccan/typesafe_cb/: _info  typesafe_cb.h
ccan/typesafe_cb/test/: compile_fail-cast_if_type-promotable.c  compile_fail-typesafe_cb-int.c  compile_fail-typesafe_cb.c  compile_fail-typesafe_cb_cast-multi.c  compile_fail-typesafe_cb_cast.c  compile_fail-typesafe_cb_postargs.c  compile_fail-typesafe_cb_preargs.c  compile_ok-typesafe_cb-NULL.c  compile_ok-typesafe_cb-undefined.c  compile_ok-typesafe_cb-vars.c  compile_ok-typesafe_cb_cast.c  run.c
cgminer/: driver-klondike.c
compat/: .gitignore  Makefile.am
compat/jansson/: Makefile.am  jansson.h
compat/jansson-2.5/: Makefile.am  configure.ac
compat/libusb-1.0/: AUTHORS  ChangeLog  Makefile.am  configure.ac  libusb-1.0.pc.in
compat/libusb-1.0/doc/: doxygen.cfg.in
compat/libusb-1.0/examples/: Makefile.am  hotplugtest.c  sam3u_benchmark.c  testlibusb1.c
compat/libusb-1.0/libusb/: Makefile.am  core.c  descriptor.c  hotplug.c  hotplug.h  io.c  libusb.h  libusbi.h  version.h
compat/libusb-1.0/libusb/os/: darwin_usb.c  darwin_usb.h  linux_netlink.c  linux_udev.c  linux_usbfs.c  linux_usbfs.h  windows_usb.c
compat/libusb-1.0/msvc/: ddk_build.cmd.orig  libusb_vs2010.sln.orig
debian/: bfgminer.docs  bfgminer.install  changelog  control  copyright  rules
debian/patches/: bfgminer-bitforce.diff  series  v2.4.1  v2.4.2  v2.6.2
lib/: .gitignore  Makefile.am  memmem.c  signal.in.h  stdint.in.h  string.h  string.in.h  strtok_r.c
m4/: .gitignore  bundled_lib.m4  custom_subdirs.m4  gnulib-cache.m4  gnulib-comp.m4  memmem.m4  mmap-anon.m4  onceonly.m4  signal_h.m4  signalblocking.m4  string_h.m4  strtok_r.m4
malgo/: keccak.c  scrypt.c  scrypt.h  sha256d.c
opencl/: aes_helper.cl  alexkarnew.cl  alexkarold.cl  animecoin.cl  arebyp.cl  bitblock.cl  bitblockold.cl  blake.cl  blake256.cl  bmw.cl  bufius.cl  ckolivas.cl  cubehash.cl  darkcoin-mod.cl  darkcoin.cl  diablo.cl  diakgcn.cl  diamond.cl  echo.cl  fresh.cl  fugue.cl  fuguecoin.cl  groestl.cl  groestl256.cl  groestlcoin-v1.cl  hamsi.cl  hamsi_helper.cl  hamsi_helper_big.cl  inkcoin.cl  jh.cl  keccak.cl  keccak1600.cl  luffa.cl  lyra2.cl  lyra2re.cl  marucoin-mod.cl  marucoin-modold.cl  marucoin.cl  maxcoin.cl  myriadcoin-groestl.cl  (+23 more)
openwrt/: .gitignore  Makefile  multibuild.sh
openwrt/bfgminer/: Makefile
packaging/suse/: Makefile.am.patch  Makefile.in.patch  bfgminer.changes  bfgminer.rpmlintrc  bfgminer.spec
scripts/: bfgminer-debug.sh  bfgminer-normal.sh  bfgminer.sh
x86_32/: .gitignore  Makefile.am  sha256_xmm.asm
x86_64/: Makefile.am  sha256_sse4_amd64.asm  sha256_xmm_amd64.asm
